<resources>
    <string name="app_name">SpotifyApp</string>
    <string name="item_title1">Spotify Sync</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="item_title2">Sign In</string>
    <string name="item_title3">Portal</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="item_title4">Sign Up</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="llm">LLM</string>
    <string name="wrapped">wrapped</string>
    <string name="pastwrapped">View Wrapped</string>
    <string name="account">Update Account</string>
</resources>