<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/login_item"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/item_title1" />
        <item
            android:id="@+id/home_item"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/item_title2" />
        <item
            android:id="@+id/portal_item"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/item_title3" />

        <item
            android:id="@+id/sign_up_item"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/item_title4" />

        <item
            android:id="@+id/llm_item"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/llm" />

        <item
            android:id="@+id/wrapped_item"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/wrapped" />

        <item
            android:id="@+id/pastwrapped_item"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/pastwrapped" />
        <!-- Add more items as needed -->
    </group>
</menu>